<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MenuScreen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#0000ff" >

    <TextView
        android:id="@+id/MenuTextToe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="190dp"
        android:layout_y="135dp"
        android:text="@string/Toe"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000"
        android:textSize="40dp" >
	</TextView>
    
    <TextView
        android:id="@+id/MenuTextTac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="118dp"
        android:layout_y="90dp"
        android:text="@string/Tac"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000"
        android:textSize="40dp" >
    </TextView>

    <TextView
        android:id="@+id/MenuTextTic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="50dp"
        android:layout_y="45dp"
        android:text="@string/Tic"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000"
        android:textSize="40dp" >
    </TextView>

    <Button
        android:id="@+id/MenuButtonAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="260dp"
        android:layout_y="2dp"
        android:text="@string/menuAbout"
        android:background="@drawable/custom_yellow_button" 
        android:clickable="true" >
    </Button>

    <Button
        android:id="@+id/MenuButtonPlay"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_x="6dp"
        android:layout_y="242dp"
        android:background="@drawable/custom_green_button"
        android:clickable="true"
        android:text="@string/MenuPlay" />

    <Button
        android:id="@+id/MenuButtonExit"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_x="83dp"
        android:layout_y="306dp"
        android:background="@drawable/custom_red_button"
        android:clickable="true"
        android:text="@string/MenuExit" />

    <Button
        android:id="@+id/MenuButtonSettings"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_x="162dp"
        android:layout_y="243dp"
        android:background="@drawable/custom_yellow_button"
        android:clickable="true"
        android:text="@string/MenuSettings" />
    
</AbsoluteLayout>