<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ResultsScreen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#0000ff" >

    <TextView
        android:id="@+id/ResultsTextWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="25dp"
        android:layout_y="30dp"
        android:text="@string/winner"
        android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#FF0000" android:textSize="35dp"/>

    <TextView
        android:id="@+id/ResultsEditWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="75dp"
        android:layout_y="80dp"
        android:text="@string/NA"
        android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#00FFFF" android:textSize="35dp"/>

    <TextView
        android:id="@+id/ResultsTextHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="65dp"
        android:layout_y="150dp"
        android:text="@string/history"
        android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#FF0000" android:textSize="30dp"/>

    <TextView
        android:id="@+id/ResultsTextP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="20dp"
        android:layout_y="190dp"
        android:text="@string/p1wins"
        android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="#00FF00" android:textSize="20dp"/>

    <TextView
        android:id="@+id/ResultsTextP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="180dp"
        android:layout_y="190dp"
        android:text="@string/p2wins"
        android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="#FFFF00" android:textSize="20dp"/>

 	<TextView
 	    android:id="@+id/ResultsEditP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="55dp"
        android:layout_y="220dp"
        android:text="@string/NA"
        android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="#00FFFF" android:textSize="20dp">
 	</TextView>
 	<TextView
 	    android:id="@+id/ResultsEditP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="215dp"
        android:layout_y="220dp"
        android:text="@string/NA"
        android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="#00FFFF" android:textSize="20dp">
 	</TextView>

    <Button
        android:id="@+id/ResultsButtonReplay"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_x="40dp"
        android:layout_y="258dp"
        android:background="@drawable/custom_green_button"
        android:clickable="true"
        android:text="@string/resultsReplay" />

    <Button
        android:id="@+id/ResultsButtonMenu"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_x="185dp"
        android:layout_y="257dp"
        android:background="@drawable/custom_yellow_button"
        android:clickable="true"
        android:text="@string/resultsMenu" />

    <Button
        android:id="@+id/ResultsButtonExit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_x="115dp"
        android:layout_y="318dp"
        android:background="@drawable/custom_red_button"
        android:clickable="true"
        android:text="@string/MenuExit" />

</AbsoluteLayout>