<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/BoardScreen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#0000ff" >
    <TextView
        android:id="@+id/BoardTextTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="100dp"
        android:layout_y="15dp"
        android:text="@string/turn"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#FFFFFF" >
	</TextView>
        
    <TextView
        android:id="@+id/BoardTextClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="60dp"
        android:layout_y="450dp"
        android:text="@string/click"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#FFFFFF" android:textSize="20dp">
    </TextView>
    
    <View
        android:id="@+id/VerticalLine1"
        android:layout_width="5dp"
        android:layout_height="300dp"
        android:layout_x="100dp"
        android:layout_y="100dp"
        android:background="#000000" >       
    </View>   
        
    <View
        android:id="@+id/VerticalLine2"
        android:layout_width="5dp"
        android:layout_height="300dp"
        android:layout_x="200dp"
        android:layout_y="100dp"
        android:background="#000000" >
    </View> 
        
    <View
        android:id="@+id/HorizontalLine1"
        android:layout_width="290dp"
        android:layout_height="5dp"
        android:layout_x="10dp"
        android:layout_y="200dp"
        android:background="#000000" >
    </View>   
        
    <View
        android:id="@+id/HorizontalLine2"
        android:layout_width="290dp"
        android:layout_height="5dp"
        android:layout_x="10dp"
        android:layout_y="300dp"
        android:background="#000000" >
    </View>
	    <Button
        android:id="@+id/BoardButton0"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_x="10dp"
        android:layout_y="100dp"
        android:text="@string/X" 
        android:background="@drawable/custom_blue_button" 
        android:clickable="true" 
        android:textColor="#00FF00" android:textSize="50dp">
    </Button>

    <Button
        android:id="@+id/BoardButton1"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:layout_x="105dp"
        android:layout_y="100dp"
        android:text="@string/X" 
        android:background="@drawable/custom_blue_button" 
        android:clickable="true" 
        android:textColor="#00FF00" android:textSize="50dp">
    </Button>

    <Button
        android:id="@+id/BoardButton2"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:layout_x="205dp"
        android:layout_y="100dp"
        android:text="@string/O" 
        android:background="@drawable/custom_blue_button" 
        android:clickable="true" 
        android:textColor="#FFFF00" android:textSize="50dp">
	</Button>
	
    <Button
        android:id="@+id/BoardButton3"
        android:layout_width="90dp"
        android:layout_height="95dp"
        android:layout_x="10dp"
        android:layout_y="205dp"
        android:text="@string/O" 
        android:background="@drawable/custom_blue_button" 
        android:clickable="true" 
        android:textColor="#FFFF00" android:textSize="50dp">
    </Button>
    <Button
        android:id="@+id/BoardButton4"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_x="105dp"
        android:layout_y="205dp"
        android:text="@string/X" 
        android:background="@drawable/custom_blue_button" 
        android:clickable="true" 
        android:textColor="#00FF00" android:textSize="50dp">
    </Button>
    <Button
        android:id="@+id/BoardButton5"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_x="205dp"
        android:layout_y="205dp"
        android:text="@string/O" 
        android:background="@drawable/custom_blue_button" 
        android:clickable="true" 
        android:textColor="#FFFF00" android:textSize="50dp">	</Button>
    <Button
        android:id="@+id/BoardButton6"
        android:layout_width="90dp"
        android:layout_height="95dp"
        android:layout_x="10dp"
        android:layout_y="305dp"
        android:text="@string/X" 
        android:background="@drawable/custom_blue_button" 
        android:clickable="true" 
        android:textColor="#00FF00" android:textSize="50dp">
    </Button>

    <Button
        android:id="@+id/BoardButton7"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_x="105dp"
        android:layout_y="305dp"
        android:text="@string/O" 
        android:background="@drawable/custom_blue_button" 
        android:clickable="true" 
        android:textColor="#FFFF00" android:textSize="50dp">
    </Button>

    <Button
        android:id="@+id/BoardButton8"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_x="205dp"
        android:layout_y="305dp"
        android:text="@string/X" 
        android:background="@drawable/custom_blue_button" 
        android:clickable="true" 
        android:textColor="#00FF00" android:textSize="50dp">
	</Button>

    <TextView
        android:id="@+id/BoardTextTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="240dp"
        android:layout_y="8dp"
        android:text="@string/BoardTurn"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        android:textColor="#FF0000"/>

    <TextView
        android:id="@+id/BoardEditTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="250dp"
        android:layout_y="24dp"
        android:text="@string/NA"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#00FFFF" />
	
</AbsoluteLayout>